# m200i-midi

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
src/: core-internal.h  core.cc  core.h  m200i-frontend.cc  m200i-frontend.h  m200i-midi.cc  m200i-usb-backend.cc  m200i-usb-backend.h  midibase.cc  midibase.h  tcpcmd-listener.cc  tcpcmd.cc  tcpcmd.h  worker.h
