
bin_PROGRAMS = m200i-midi

m200i_midi_SOURCES = \
	src/m200i-midi.cc \
	src/m200i-usb-backend.cc \
	src/m200i-frontend.cc \
	src/midibase.cc \
	src/tcpcmd.cc \
	src/tcpcmd-listener.cc \
	src/core.cc

nobase_include_HEADERS = \
	src/midibase.h \
	src/m200i-usb-backend.h \
	src/m200i-frontend.h \
	src/worker.h \
	src/core-internal.h \
	src/tcpcmd.h \
	src/core.h

